--- a/Stable/小米10S.md
+++ b/Stable/小米10S.md
@@ -1,9 +1,22 @@
 | 小米10S  稳定版    |
 | ---- |
-| [miui_THYME_V12.5.14.0.RGACNXM_71ebdf5fb2_11.0.zip](https://hugeota.d.miui.com/V12.5.14.0.RGACNXM/miui_THYME_V12.5.14.0.RGACNXM_71ebdf5fb2_11.0.zip)    |
-| [miui_THYME_V12.5.8.0.RGACNXM_3e742672c5_11.0.zip](https://hugeota.d.miui.com/V12.5.8.0.RGACNXM/miui_THYME_V12.5.8.0.RGACNXM_3e742672c5_11.0.zip)    |
-| [miui_THYME_V12.5.7.0.RGACNXM_cb67d34ec7_11.0.zip](https://hugeota.d.miui.com/V12.5.7.0.RGACNXM/miui_THYME_V12.5.7.0.RGACNXM_cb67d34ec7_11.0.zip)    |
-| [miui_THYME_V12.5.3.0.RGACNXM_4648eb335d_11.0.zip](https://hugeota.d.miui.com/V12.5.3.0.RGACNXM/miui_THYME_V12.5.3.0.RGACNXM_4648eb335d_11.0.zip)    |
-| [miui_THYME_V12.0.11.0.RGACNXM_e07287cd2e_11.0.zip](https://hugeota.d.miui.com/V12.0.11.0.RGACNXM/miui_THYME_V12.0.11.0.RGACNXM_e07287cd2e_11.0.zip)    |
-| [miui_THYME_V12.0.10.0.RGACNXM_60760ff53d_11.0.zip](https://hugeota.d.miui.com/V12.0.10.0.RGACNXM/miui_THYME_V12.0.10.0.RGACNXM_60760ff53d_11.0.zip)    |
-| [miui_THYME_V12.0.7.0.RGACNXM_5087232627_11.0.zip](https://hugeota.d.miui.com/V12.0.7.0.RGACNXM/miui_THYME_V12.0.7.0.RGACNXM_5087232627_11.0.zip)    |
+| [miui_THYME_V14.0.5.0.TGACNXM_bd6a7e7e60_13.0.zip](http://hugeota.d.miui.com/V14.0.5.0.TGACNXM/miui_THYME_V14.0.5.0.TGACNXM_bd6a7e7e60_13.0.zip)    |
+| [miui_THYME_V14.0.4.0.TGACNXM_dd2bd8fc3b_13.0.zip](http://hugeota.d.miui.com/V14.0.4.0.TGACNXM/miui_THYME_V14.0.4.0.TGACNXM_dd2bd8fc3b_13.0.zip)    |
+| [miui_THYME_V14.0.2.0.TGACNXM_7b4df32800_13.0.zip](http://hugeota.d.miui.com/V14.0.2.0.TGACNXM/miui_THYME_V14.0.2.0.TGACNXM_7b4df32800_13.0.zip)    |
+| [miui_THYME_V13.0.10.0.SGACNXM_3a53c30250_12.0.zip](http://hugeota.d.miui.com/V13.0.10.0.SGACNXM/miui_THYME_V13.0.10.0.SGACNXM_3a53c30250_12.0.zip)    |
+| [miui_THYME_V13.0.8.0.SGACNXM_8d865cf2ea_12.0.zip](http://hugeota.d.miui.com/V13.0.8.0.SGACNXM/miui_THYME_V13.0.8.0.SGACNXM_8d865cf2ea_12.0.zip)    |
+| [miui_THYME_V13.0.6.0.SGACNXM_f43177d3f1_12.0.zip](http://hugeota.d.miui.com/V13.0.6.0.SGACNXM/miui_THYME_V13.0.6.0.SGACNXM_f43177d3f1_12.0.zip)    |
+| [miui_THYME_V13.0.5.0.SGACNXM_ff58567091_12.0.zip](http://hugeota.d.miui.com/V13.0.5.0.SGACNXM/miui_THYME_V13.0.5.0.SGACNXM_ff58567091_12.0.zip)    |
+| [miui_THYME_V13.0.3.0.SGACNXM_109e7cc114_12.0.zip](http://hugeota.d.miui.com/V13.0.3.0.SGACNXM/miui_THYME_V13.0.3.0.SGACNXM_109e7cc114_12.0.zip)    |
+| [miui_THYME_V13.0.1.0.SGACNXM_d2d86a3a8b_12.0.zip](http://hugeota.d.miui.com/V13.0.1.0.SGACNXM/miui_THYME_V13.0.1.0.SGACNXM_d2d86a3a8b_12.0.zip)    |
+| [miui_THYME_V12.5.14.0.RGACNXM_71ebdf5fb2_11.0.zip](http://hugeota.d.miui.com/V12.5.14.0.RGACNXM/miui_THYME_V12.5.14.0.RGACNXM_71ebdf5fb2_11.0.zip)    |
+| [miui_THYME_V12.5.8.0.RGACNXM_3e742672c5_11.0.zip](http://hugeota.d.miui.com/V12.5.8.0.RGACNXM/miui_THYME_V12.5.8.0.RGACNXM_3e742672c5_11.0.zip)    |
+| [miui_THYME_V12.5.7.0.RGACNXM_cb67d34ec7_11.0.zip](http://hugeota.d.miui.com/V12.5.7.0.RGACNXM/miui_THYME_V12.5.7.0.RGACNXM_cb67d34ec7_11.0.zip)    |
+| [miui_THYME_V12.5.6.0.RGACNXM_4671817ef9_11.0.zip](http://hugeota.d.miui.com/V12.5.6.0.RGACNXM/miui_THYME_V12.5.6.0.RGACNXM_4671817ef9_11.0.zip)    |
+| [miui_THYME_V12.5.5.0.RGACNXM_4922d47227_11.0.zip](http://hugeota.d.miui.com/V12.5.5.0.RGACNXM/miui_THYME_V12.5.5.0.RGACNXM_4922d47227_11.0.zip)    |
+| [miui_THYME_V12.5.3.0.RGACNXM_4648eb335d_11.0.zip](http://hugeota.d.miui.com/V12.5.3.0.RGACNXM/miui_THYME_V12.5.3.0.RGACNXM_4648eb335d_11.0.zip)    |
+| [miui_THYME_V12.5.1.0.RGACNXM_f1a235ff5e_11.0.zip](http://hugeota.d.miui.com/V12.5.1.0.RGACNXM/miui_THYME_V12.5.1.0.RGACNXM_f1a235ff5e_11.0.zip)    |
+| [miui_THYME_V12.0.11.0.RGACNXM_e07287cd2e_11.0.zip](http://hugeota.d.miui.com/V12.0.11.0.RGACNXM/miui_THYME_V12.0.11.0.RGACNXM_e07287cd2e_11.0.zip)    |
+| [miui_THYME_V12.0.10.0.RGACNXM_60760ff53d_11.0.zip](http://hugeota.d.miui.com/V12.0.10.0.RGACNXM/miui_THYME_V12.0.10.0.RGACNXM_60760ff53d_11.0.zip)    |
+| [miui_THYME_V12.0.8.0.RGACNXM_0eca741a51_11.0.zip](http://hugeota.d.miui.com/V12.0.8.0.RGACNXM/miui_THYME_V12.0.8.0.RGACNXM_0eca741a51_11.0.zip)    |
+| [miui_THYME_V12.0.7.0.RGACNXM_5087232627_11.0.zip](http://hugeota.d.miui.com/V12.0.7.0.RGACNXM/miui_THYME_V12.0.7.0.RGACNXM_5087232627_11.0.zip)    |
